--- a/phonebook-backend/package.json
+++ b/phonebook-backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "powershell -Command \"Remove-Item -Recurse -Force dist; cd ../phonebook-frontend; npm run build; Copy-Item -Recurse dist ../phonebook-backend\"",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Aditya Dalvi",
   "license": "ISC",
